tree & graphs implementation 1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
         </div>
     </div>
-    <script src="display.js"></script>
+    <script src="graphs.js"></script>
+    <script src="aritmeticTreeGenerator.js"></script>
 </body>
 
 </html>
